apps/zcino/k8s/baseline/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zeaz
  labels:
    pod-security.kubernetes.io/enforce: baseline
---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    pod-security.kubernetes.io/enforce: baseline
---
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflare
  labels:
    pod-security.kubernetes.io/enforce: baseline
